# Git-Pseudocode-Insertionsort

./: introprog_ maxheap.c  introprog_ merge_sort_iterativ.c  introprog_ stacks-rpn.c  introprog_buecherliste.c  introprog_complexity_steps_sorting.c  introprog_countsort.c  introprog_insertionsort.c  introprog_telefonbuch.c
Einführung in die Programmierung/: introprog_ merge_sort_rekursiv.c  introprog_ sortierte_buecherliste.c  introprog_complexity_steps_intro.c
Rechnernetze und Verteilte Systeme/Projekt 1/Submission/RN-Praxis1-0.1.1-Source/: webserver.c
Rechnernetze und Verteilte Systeme/Projekt 1/Submission/RN-Praxis1-0.1.1-Source/test/: ._httpreply.py  dynamic_content.py  httpreplies.py  httpreply.py  listen.py  packets.py  (+2 more)
Rechnernetze und Verteilte Systeme/Projekt 1/Vorgabe/praxis1/: CMakeLists.txt  webserver.c
Rechnernetze und Verteilte Systeme/Projekt 3/Submission/RN-Praxis3-0.1.1-Source/: CMakeLists.txt  rnvs_tb-2022_projekt3_1-py3-none-any.whl  tests.py
Rechnernetze und Verteilte Systeme/Projekt 3/Submission/RN-Praxis3-0.1.1-Source/include/: neighbour.h  server.h
Rechnernetze und Verteilte Systeme/Projekt 3/Submission/RN-Praxis3-0.1.1-Source/src/: neighbour.c  peer.c  server.c
Rechnernetze und Verteilte Systeme/Projekt 3/Submission/RN-Praxis3-0.1.1-Source/testresults/: results.csv
Rechnernetze und Verteilte Systeme/Projekt 3/Vorgabe/praxis3/: CMakeLists.txt
Systemprogrammierung/DOS OS/submission/src/: calloc.c  mmu.c
Systemprogrammierung/Scheduler/submission/submission/: studentinfo.txt
Systemprogrammierung/Scheduler/vorgabe/: vorgabe
(+34 files in other folders)
